Css fix with word wrapping.

--- a/media/gopher.css
+++ b/media/gopher.css
@@ -11,7 +11,7 @@ img { vertical-align: middle; /*margin-top: -2px;*/ margin-bottom: 2px; }
     padding-bottom: 20px;
     border-left: 1px solid #AAA;
     border-right: 1px solid #AAA;
-    word-wrap: normal;
+    word-wrap: break-word;
 }
 #header {
     border-bottom: 1px solid #999;
